# swarm-client

./: .gitignore  CONTRIBUTING  README.md  pyproject.toml  pytest.ini
.serena/: project.yml
examples/: config-test-local.json  config-test-remote.json  config.example.json
src/client_driver/: __main__.py
src/client_driver/client/: __init__.py  websocket_client.py
src/client_driver/config/: loader.py  logging_setup.py  models.py
src/client_driver/devices/: factory.py  registry.py
src/client_driver/drivers/: __init__.py  interfaces.py  plr_wrappers.py  sims.py  teachpoints.py
src/client_driver/executor/: executor.py
src/client_driver/protocol/: __init__.py  messages.py
src/orca_client_driver/: __init__.py
src/swarm_client/: __init__.py  __main__.py
src/swarm_client/client/: websocket_client.py
src/swarm_client/config/: __init__.py  loader.py  logging_setup.py  models.py
src/swarm_client/devices/: __init__.py  factory.py  registry.py
src/swarm_client/drivers/: __init__.py
src/swarm_client/executor/: __init__.py  executor.py
src/swarm_client/protocol/: messages.py
tests/: __init__.py  conftest.py  test_executor.py  test_protocol.py  test_registry.py
