[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-client"
dynamic = ["version"]
description = "WebSocket client for connecting local device drivers to Swarm platform"
authors = [
    { name = "Cheshire Labs", email = "support@cheshirelabs.io" }
]
urls = {Repository = "https://github.com/Cheshire-Labs/swarm-client"}
readme = "README.md"
license = {text = "AGPL-3.0-only"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "cheshire-drivers @ git+https://github.com/Cheshire-Labs/cheshire-drivers.git@v0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "swarm_client.__version__"}
